--- a/Backend/AcountService/src/main/resources/application.properties
+++ b/Backend/AcountService/src/main/resources/application.properties
@@ -8,8 +8,9 @@ springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/DB_ACOUNT
+spring.datasource.username=mhqa
+spring.datasource.password=mh8q23pr99
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
