--- a/Backend/AcountService/src/main/resources/application.properties
+++ b/Backend/AcountService/src/main/resources/application.properties
@@ -8,9 +8,11 @@ springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/DB_ACOUNT
+spring.datasource.url=jdbc:postgresql://localhost:5432/mhqa
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+#docker container run -d -p 5432:5432 -v /my/custom:/etc/mysql/conf.d -e POSTGRES_USER=mhqa -e POSTGRES_PASSWORD=mh8q23pr99 -e POSTGRES_DATABASE=DB_ACOUNT --name=BD_Postgre  postgres
