--- a/Backend/ClienteService/src/main/resources/application.properties
+++ b/Backend/ClienteService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=clientesservice
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/nomeBanco
+spring.datasource.url=jdbc:postgresql://localhost:5432/mhqa
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
