--- a/Backend/TransacaoService/src/main/resources/application.properties
+++ b/Backend/TransacaoService/src/main/resources/application.properties
@@ -1,2 +1,20 @@
 spring.application.name=transacaoservice
 
+server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mhqa
+spring.datasource.username=mhqa
+spring.datasource.password=mh8q23pr99
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=mhqa
+spring.rabbitmq.password=mhqa
+
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.path=/api-documentation
+springdoc.api-docs.path=/api-api-docs
