Teste Api cliente
testes de métodos ok

--- a/Backend/TransacaoService/src/main/resources/application.properties
+++ b/Backend/TransacaoService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=transacaoservice
 
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mhqa
+spring.datasource.url=jdbc:postgresql://localhost:5432/DB_BANCOFAKE
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
