--- a/Backend/AcountService/src/main/resources/application.properties
+++ b/Backend/AcountService/src/main/resources/application.properties
@@ -8,7 +8,7 @@ springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mhqa
+spring.datasource.url=jdbc:postgresql://localhost:5432/DB_BANCOFAKE
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
