--- a/Backend/AuthorizationService/src/main/resources/application.properties
+++ b/Backend/AuthorizationService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=authorizationservice
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=mhqa
-spring.rabbitmq.password=mhqa
+#spring.rabbitmq.username=mhqa
+#spring.rabbitmq.password=mhqa
 
 
