--- a/Backend/TransacaoService/src/main/resources/application.properties
+++ b/Backend/TransacaoService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=transacaoservice
 
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/DB_BANCOFAKE
+spring.datasource.url=jdbc:postgresql://localhost:5433/DB_BANCOFAKE
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
@@ -11,8 +11,10 @@ spring.jpa.show-sql=true
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=mhqa
-spring.rabbitmq.password=mhqa
+#spring.rabbitmq.username=mhqa
+#spring.rabbitmq.password=mhqa
+
+spring.main.allow-bean-definition-overriding=true
 
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
