--- a/Backend/JWT/src/main/resources/application.properties
+++ b/Backend/JWT/src/main/resources/application.properties
@@ -9,6 +9,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+#SWAGGER
+#http://localhost:8080/swagger-ui/index.html  LINK DE ACESSO
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.path=/api-documentation
+springdoc.api-docs.path=/api-api-docs
+
 server.port = 8085
 
 #docker container run -d -p 5432:5432 -v /my/custom:/etc/mysql/conf.d -e POSTGRES_USER=mhqa -e POSTGRES_PASSWORD=mh8q23pr99 -e POSTGRES_DATABASE=autenticationDB --name=BD_Postgre  postgres
