--- a/Backend/AcountService/src/main/resources/application.properties
+++ b/Backend/AcountService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=acounteservice
+spring.application.name=acount
 
 server.port = 8082
 
@@ -16,5 +16,14 @@ spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+
+#GATEWAY
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.main.web-application-type=reactive
+spring.main.allow-bean-definition-overriding=true
+
 
 #docker container run -d -p 5432:5432 -v /my/custom:/etc/mysql/conf.d -e POSTGRES_USER=mhqa -e POSTGRES_PASSWORD=mh8q23pr99 -e POSTGRES_DATABASE=DB_ACOUNT --name=BD_Postgre  postgres
