--- a/Backend/AuthorizationService/src/main/resources/application.properties
+++ b/Backend/AuthorizationService/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.application.name=authorizationservice
-
-
+spring.application.name=auth
+server.port = 8084
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 #spring.rabbitmq.username=mhqa
 #spring.rabbitmq.password=mhqa
 
-
+spring.datasource.url=jdbc:postgresql://localhost:5433/DB_BANCOFAKE
+spring.datasource.username=mhqa
+spring.datasource.password=mh8q23pr99
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
