--- a/Backend/ClienteService/src/main/resources/application.properties
+++ b/Backend/ClienteService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=clientesservice
+spring.application.name=cliente
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/DB_CLIENTE
 spring.datasource.username=mhqa
@@ -15,5 +15,12 @@ springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
 server.port=8081
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.main.web-application-type=reactive
+spring.main.allow-bean-definition-overriding=true
 
 #docker run -d -p 3306:3306 --name db_mysqlCliente -v /my/custom:/etc/mysql/conf.d -e MYSQL_ROOT_PASSWORD=mh8q23pr99 -e MYSQL_USER=mhqa -e MYSQL_PASSWORD=mh8q23pr99 -e MYSQL_DATABASE=db_MsCliente mysql
