--- a/Backend/JWT/src/main/resources/application.properties
+++ b/Backend/JWT/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=MHQA
+spring.application.name=security
 
 api.security.token.secret=${JWT_SECRET:28764JY723ffZ}
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/mhqa
+spring.datasource.url=jdbc:postgresql://localhost:5433/DB_BANCOFAKE
 spring.datasource.username=mhqa
 spring.datasource.password=mh8q23pr99
 spring.jpa.hibernate.ddl-auto=update
@@ -17,5 +17,12 @@ springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
 server.port = 8085
+
+#GATEWAY
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.main.web-application-type=reactive
+spring.main.allow-bean-definition-overriding=true
 
 #docker container run -d -p 5432:5432 -v /my/custom:/etc/mysql/conf.d -e POSTGRES_USER=mhqa -e POSTGRES_PASSWORD=mh8q23pr99 -e POSTGRES_DATABASE=autenticationDB --name=BD_Postgre  postgres
