--- a/Backend/TransacaoService/src/main/resources/application.properties
+++ b/Backend/TransacaoService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=transacaoservice
+spring.application.name=transacao
 
 server.port=8083
 
@@ -20,3 +20,9 @@ springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
 springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.main.web-application-type=reactive
