Alteração para Beta Inicial
Alteração de lógica, funcionamento, documentação, apta para atualização e melhoria em momento oportuno

--- a/Backend/AcountService/src/main/resources/application.properties
+++ b/Backend/AcountService/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.show-sql=true
 
 
 #GATEWAY
+#eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
