--- a/Backend/TransacaoService/src/main/resources/application.properties
+++ b/Backend/TransacaoService/src/main/resources/application.properties
@@ -21,8 +21,8 @@ springdoc.swagger-ui.filter=true
 springdoc.swagger-ui.path=/api-documentation
 springdoc.api-docs.path=/api-api-docs
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.main.web-application-type=reactive
