--- a/Backend/ClienteService/src/main/resources/application.properties
+++ b/Backend/ClienteService/src/main/resources/application.properties
@@ -16,8 +16,8 @@ springdoc.api-docs.path=/api-api-docs
 
 server.port=8081
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.main.web-application-type=reactive
