--- a/Backend/JWT/src/main/resources/application.properties
+++ b/Backend/JWT/src/main/resources/application.properties
@@ -19,7 +19,8 @@ springdoc.api-docs.path=/api-api-docs
 server.port = 8085
 
 #GATEWAY
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.main.web-application-type=reactive
